--- a/demo.html
+++ b/demo.html
@@ -20,12 +20,9 @@
   <body style="margin:10px">
     <h1 class="title">Range Slider for video-js</h1>
 
-	<video id="vid1" class="video-js vjs-default-skin" controls preload="none" width="640" height="264"
-	poster="http://video-js.zencoder.com/oceans-clip.png"
+	<video id="vid1" class="video-js vjs-default-skin" controls preload="none" width="640" height="264"	
 	data-setup=''>
-		<source src="http://video-js.zencoder.com/oceans-clip.mp4" type='video/mp4' />
-		<source src="http://video-js.zencoder.com/oceans-clip.webm" type='video/webm' />
-		<source src="http://video-js.zencoder.com/oceans-clip.ogv" type='video/ogg' />
+		<source src="http://www.sample-videos.com/video/mp4/720/big_buck_bunny_720p_5mb.mp4" type='video/mp4' />
 		<track kind="captions" src="demo.captions.vtt" srclang="en" label="English"></track><!-- Tracks need an ending tag thanks to IE9 -->
 	</video>
 	
